web/book/tests/documentation/snapshots/documentation__book__reference__syntax__keywords__quoting__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
---
SELECT
  `first name`
FROM
  employees

