web/book/tests/documentation/snapshots/documentation__book__reference__syntax__keywords__quoting__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
---
SELECT
  "first name"
FROM
  employees
